<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/sort_order_popularity_asc"
        android:orderInCategory="10"
        android:title="@string/sort_order_popularity_asc"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_order_popularity_desc"
        android:orderInCategory="20"
        android:title="@string/sort_order_popularity_desc"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_order_release_date_asc"
        android:orderInCategory="30"
        android:title="@string/sort_order_release_date_asc"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_order_release_date_desc"
        android:orderInCategory="40"
        android:title="@string/sort_order_release_date_desc"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_order_original_title_desc"
        android:orderInCategory="50"
        android:title="@string/sort_order_original_title_desc"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_order_original_title_asc"
        android:orderInCategory="60"
        android:title="@string/sort_order_original_title_asc"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_order_average_count_asc"
        android:orderInCategory="70"
        android:title="@string/sort_order_average_count_asc"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_order_average_count_desc"
        android:orderInCategory="80"
        android:title="@string/sort_order_average_count_desc"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_order_vote_count"
        android:orderInCategory="80"
        android:title="@string/sort_order_vote_count_desc"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_caches"
        android:orderInCategory="80"
        android:title="@string/clear_caches"
        app:showAsAction="never" />


</menu>
