<com.org.android.popularmovies.widgets.scrollable.view.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="0dp"
    android:layout_marginRight="0dp"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_small">

        <FrameLayout
            android:id="@+id/lv_title_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_small">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginBottom="@dimen/margin_bottom_small"
                android:layout_marginTop="@dimen/margin_top_small"
                android:gravity="center"
                android:text="@string/movie_title"
                android:textSize="@dimen/text_size_big"
                android:textStyle="bold" />

        </FrameLayout>

        <View
            android:id="@+id/anchor"
            style="@style/MovieDetailAnchor"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--details-->
        <LinearLayout
            android:id="@+id/image_rel_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/anchor"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_left_small"
            android:layout_marginRight="@dimen/margin_left_small"
            android:background="@android:color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false">

                <com.org.android.popularmovies.widgets.ResizedImageView
                    android:id="@+id/movie_poster_img"
                    android:layout_width="150dp"
                    android:layout_height="130dp"

                    android:layout_marginBottom="@dimen/margin_bottom_medium"
                    android:layout_marginLeft="@dimen/margin_left_small"
                    android:layout_marginRight="@dimen/margin_right_medium"
                    android:layout_marginStart="@dimen/margin_left_small"
                    android:layout_marginTop="@dimen/margin_top_small"

                    android:contentDescription="@null"
                    tools:src="@drawable/placeholder_movie_item_image" />


                <ImageButton
                    android:id="@+id/movie_favorite_button"
                    style="@style/FavoriteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/movie_item_save_favorites"
                    android:tint="@color/theme_primary_dark" />

                <LinearLayout
                    android:id="@+id/lv_movie_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/movie_poster_img"
                    android:layout_toLeftOf="@id/movie_favorite_button"
                    android:layout_toRightOf="@+id/movie_poster_img"
                    android:layout_toStartOf="@id/movie_favorite_button"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/release_date"
                        android:textSize="@dimen/text_size_vmedium" />

                    <TextView
                        android:id="@+id/tv_vote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/vote_average"
                        android:textSize="@dimen/text_size_vmedium" />
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/list_dropdown_divider_color" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="@string/overview_movie"
                android:textSize="@dimen/text_size_big"
                tools:text="@string/placeholder_movie_plot" />

            <include layout="@layout/partial_movies_reviews" />

            <include layout="@layout/partial_movie_videos" />
        </LinearLayout>
    </RelativeLayout>
</com.org.android.popularmovies.widgets.scrollable.view.ObservableScrollView>